# pgmig

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  prek.toml  pyproject.toml  test_cli_copy.py
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/workflows/: ci.yml  linters.yaml  mypy.yaml  release.yml  unit_tests.yaml
linters/: mypy.toml  ruff.toml  ty.toml
linters/cspell/: words.txt
scripts/: bench_drivers.py  release.py
src/pgmig/: __init__.py  _api.py  _build.py  _cli.py  _db.py  _errors.py  _keys.py  _migration.py  _models.py  _redact.py  _sql.py  api.py  diff.py  introspect.py  main.py  model.py  render.py
src/pgmig/_build/: _core.py  _engine.py  composite_types.py  constraints.py  domains.py  enums.py  extensions.py  functions.py  indexes.py  invalid_indexes.py  materialized_views.py  matview_indexes.py  schemas.py  sequences.py  tables.py  triggers.py  unsupported.py  view_column_dependencies.py  view_dependencies.py  views.py
src/pgmig/_diff/: __init__.py  _context.py  _core.py  _engine.py  composite_types.py  constraints.py  default_privileges.py  domains.py  enums.py  extensions.py  functions.py  grants.py  indexes.py  materialized_views.py  matview_indexes.py  policies.py  range_types.py  schemas.py  sequences.py  tables.py  triggers.py  views.py
src/pgmig/_introspect/: _context.py  _core.py  _engine.py  composite_type_dependencies.py  composite_types.py  constraints.py  default_privileges.py  domains.py  enum_dependencies.py  enums.py  extensions.py  functions.py  indexes.py  invalid_indexes.py  materialized_views.py  matview_dependencies.py  matview_indexes.py  policies.py  range_types.py  schema_connections.py  schemas.py  sequences.py  tables.py  triggers.py  unsupported.py  view_column_dependencies.py  view_dependencies.py  views.py
src/pgmig/build_queries/: constraints.sql  enums.sql  extensions.sql  functions.sql  indexes.sql  schemas.sql  sequences.sql  tables.sql  triggers.sql
tests/: Dockerfile  conftest.py  docker-compose.yml  harness.py  pytest.ini  test_cli.py  test_constraint.py  test_diff.py  test_domain.py  test_enum.py  test_extension.py  test_fixtures.py  test_foreign_key.py  test_function.py  test_generate.py  test_index.py  test_introspect.py  test_invalid_index.py  test_materialized_view.py  test_matview_index.py  test_model.py  test_omit_schema.py  test_partitioned_table.py  test_pgmig.py  test_redact.py  test_render.py  test_sanity.py  test_schema.py  test_sequence.py  test_sql.py  test_table.py  test_table_column.py  test_table_column_comment.py  test_table_column_identity_change.py  test_table_column_serial.py  test_table_comment.py  test_table_ownership.py  test_trigger.py  test_unsupported_type.py  test_view.py  (+3 more)
tests/_api/: generate_setup.py  ownership.py
tests/_api/constraint/: test_constraint.py  test_constraint_nulls_not_distinct.py  test_foreign_key.py  test_index.py  test_index_nulls_not_distinct.py  test_invalid_index.py  test_temporal_constraint.py
tests/_api/general/: test_async_misuse.py  test_comment_convergence.py  test_default_privileges.py  test_sanity.py  test_sequence.py  test_unsupported_type.py
tests/_api/materialized_view/: test_materialized_view.py  test_materialized_view_column_dependencies.py  test_materialized_view_dependencies.py  test_materialized_view_index.py  test_materialized_view_ownership.py
tests/_api/routine/: test_function.py  test_function_deps.py  test_function_grants.py  test_function_ownership.py  test_policy.py  test_trigger.py  test_view_trigger.py
tests/_api/schema/: test_extension.py  test_ignore_schema.py  test_schema.py  test_schema_grants.py  test_schema_ownership.py  test_search_path.py
tests/_api/sequence/: test_sequence_grants.py  test_sequence_owner.py  test_sequence_ownership.py  test_sequence_persistence.py
tests/_api/table/: test_partitioned_table.py  test_table.py  test_table_column.py  test_table_column_collation.py  test_table_column_comment.py  test_table_column_generated.py  test_table_column_identity_change.py  test_table_column_identity_options.py  test_table_column_serial.py  test_table_comment.py  test_table_grants.py  test_table_ownership.py  test_table_persistence.py  test_table_replica_identity.py  test_table_rls.py
tests/_api/type/: test_composite_type.py  test_domain.py  test_enum.py  test_enum_dependencies.py  test_range_type.py  test_type_ownership.py
tests/_api/view/: test_view.py  test_view_column_dependencies.py  test_view_dependencies.py  test_view_options.py  test_view_ownership.py
tests/_build/: test_core.py  test_engine.py  test_pgbouncer.py  test_view_dependency_filters.py
tests/_diff/: test_constraints.py  test_core.py  test_functions.py  test_sequences.py  test_tables.py  test_views.py
tests/_introspect/: test_engine.py  test_pgbouncer.py  test_snapshot.py  test_view_dependency_filters.py  test_view_query_lockstep.py
tests/api/: generate_setup.py  test_comment_convergence.py  test_composite_type.py  test_enum.py  test_index.py  test_search_path.py  test_table_column.py  test_table_column_generated.py  test_table_ownership.py
tests/api/constraint/: test_constraint.py  test_foreign_key.py  test_index.py  test_invalid_index.py
tests/api/general/: test_comment_convergence.py  test_sanity.py  test_sequence.py  test_unsupported_type.py
tests/api/materialized_view/: test_materialized_view.py  test_materialized_view_column_dependencies.py  test_materialized_view_index.py
tests/api/routine/: test_function.py  test_function_deps.py  test_trigger.py
tests/api/schema/: test_extension.py  test_schema.py  test_search_path.py
tests/api/table/: test_partitioned_table.py  test_table.py  test_table_column.py  test_table_column_comment.py  test_table_column_generated.py  test_table_column_identity_change.py  test_table_column_serial.py  test_table_comment.py  test_table_ownership.py
tests/fixtures/: db_reset.sql  db_utils.py  generate_setup.py  test_db_utils.py
tests/pgbouncer/: pgbouncer.ini  userlist.txt
tests/utils/: db_utils.py  test_db_name.py
(+52 files in other folders)
