[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[dependency-groups]
dev = [
  # asyncpg is an optional extra for users, but the dev env installs it to test that driver.
  "asyncpg>=0.31.0",
  "asyncpg-stubs>=0.31.3",
  "httpx==0.28.1",
  "mypy==2.3.0",
  "pre-commit==4.6.0",
  "psycopg==3.3.4",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
  "pytest-sugar==1.1.1",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "shpyx==0.0.37",
  "tenacity==9.1.4",
  "ty==0.0.60",
  "typing-extensions==4.16.0",
]

[project]
name = "pgmig"
dynamic = ["version"]
description = "Generate migrations between Postgres databases"
authors = [{name = "Yossi Rozantsev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["postgres", "postgresql", "migrations", "database", "schema"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
# The default driver is psycopg (pure Python), which talks to a system-provided libpq. Faster
# and driver-alternative builds are opt-in extras below; the runtime `driver` argument selects
# which installed driver to use.
dependencies = ["psycopg>=3.3.4", "pydantic>=2", "typer>=0.12"]

[project.optional-dependencies]
# psycopg's C speedups compiled against the system libpq. Fast; recommended for production.
# Needs a C compiler and libpq headers at install time.
c = ["psycopg[c]>=3.3.4"]
# psycopg's C speedups shipped as a prebuilt wheel that bundles libpq. Fast and needs no build
# tools or system libpq -- but the bundled libpq/OpenSSL only update when psycopg-binary does,
# so psycopg recommends against it for production. Great for CLI / standalone use.
binary = ["psycopg[binary]>=3.3.4"]
# The asyncpg driver instead of psycopg. Needs no libpq at all. Select it with driver="asyncpg".
asyncpg = ["asyncpg>=0.31.0"]

[project.scripts]
pgmig = "pgmig._cli:app"

[project.urls]
homepage = "https://github.com/Apakottur/pgmig"
repository = "https://github.com/Apakottur/pgmig"
documentation = "https://github.com/Apakottur/pgmig"

[tool.hatch.version]
source = "vcs"

[tool.uv]
package = true
